--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,34 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material Icons"
-      rel="stylesheet"
-      type="text/css"
+      rel="preload"
+      as="style"
+      href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
+      onload="this.rel='stylesheet'"
     />
     <link
-      href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css"
-      rel="stylesheet"
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css?family=Material+Icons"
+      onload="this.rel='stylesheet'"
+    />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic"
+      onload="this.rel='stylesheet'"
+    />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css?family=Lato"
+      onload="this.rel='stylesheet'"
+    />
+    <link
+      rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css?family=Oswald"
+      onload="this.rel='stylesheet'"
     />
     <title>ICJIA Research Hub Studio-prototype</title>
   </head>
